// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<div
  class="rmd-box rmd-box--column rmd-box--align-stretch rmd-box--justify-stretch rmd-card rmd-card--shadowed"
  data-testid="card"
>
  Content
</div>
`;

exports[`Card > should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<div
  class="rmd-box rmd-box--column rmd-box--align-stretch rmd-box--justify-stretch rmd-card rmd-card--shadowed custom-class-name"
  data-testid="card"
  style="color: white;"
>
  Content
</div>
`;

exports[`Card > should apply the correct styling, HTML attributes, and allow a ref 3`] = `
<div
  class="rmd-box rmd-box--column rmd-box--align-stretch rmd-box--justify-stretch rmd-card rmd-card--bordered"
  data-testid="card"
  style=""
>
  Content
</div>
`;

exports[`Card > should apply the correct styling, HTML attributes, and allow a ref 4`] = `
<div
  class="rmd-box rmd-box--column rmd-box--full-width rmd-box--align-stretch rmd-box--justify-stretch rmd-card rmd-card--shadowed"
  data-testid="card"
  style=""
>
  Content
</div>
`;
